Basic project setup

--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -132,5 +132,8 @@
       }
     }
   },
-  "defaultProject": "CRMService"
+  "defaultProject": "CRMService",
+  "cli": {
+    "analytics": false
+  }
 }
