--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -33,7 +33,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [ "node_modules/chart.js/auto/auto.js" ]
           },
           "configurations": {
             "production": {
@@ -100,7 +100,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [ "node_modules/chart.js/auto/auto.js" ]
+
           }
         },
         "server": {
