--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -26,6 +26,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "auth0": "^4.1.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "jquery": "^3.6.4",
     "ng-openapi-gen": "^0.50.4",
     "oidc-client": "^1.11.5",
