--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,9 +24,14 @@
     "@angular/platform-server": "^15.2.8",
     "@angular/router": "^15.2.8",
     "@auth0/angular-jwt": "^5.2.0",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "auth0": "^4.1.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
+    "font-awesome": "^4.7.0",
+    "force": "^0.0.3",
     "jquery": "^3.6.4",
     "ng-openapi-gen": "^0.50.4",
     "oidc-client": "^1.11.5",
